--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnGo"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="93dp"
