--- a/app/src/main/res/layout/fragment_plant_item.xml
+++ b/app/src/main/res/layout/fragment_plant_item.xml
@@ -15,6 +15,7 @@
         android:src="@drawable/light_lavender"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:transitionName="fade"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
